--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,54 +17,6 @@ if(APPLE)
   set(CMAKE_MACOSX_RPATH ON)
 endif(APPLE)
 
-option(DISABLE_COLORS "no ANSI colors in console" OFF)
-if(DISABLE_COLORS)
-  message(STATUS "disabling ANSI colors")
-  add_compile_definitions(DISABLE_COLORS)
-endif()
-
-option(DARK_COLORS "darker color scheme" OFF)
-if(DARK_COLORS)
-  message(STATUS "using darker color scheme")
-  add_compile_definitions(DARK_COLORS)
-endif()
-
-option(DISABLE_DEBUG "disable DEBUG output" OFF)
-if(DISABLE_DEBUG)
-  message(STATUS "disabling DEBUG output")
-  add_compile_definitions(DISABLE_DEBUG)
-endif()
-
-option(DISABLE_WARNING "disable WARNING output" OFF)
-if(DISABLE_WARNING)
-  message(STATUS "disabling WARNING output")
-  add_compile_definitions(DISABLE_WARNING)
-endif()
-
-option(DISABLE_ERROR "disable ERROR output" OFF)
-if(DISABLE_ERROR)
-  message(STATUS "disabling ERROR output")
-  add_compile_definitions(DISABLE_ERROR)
-endif()
-
-option(DISABLE_LOG "disable LOG output" OFF)
-if(DISABLE_LOG)
-  message(STATUS "disabling LOG output")
-  add_compile_definitions(DISABLE_LOG)
-endif()
-
-option(DISABLE_INFO "disable INFO output" OFF)
-if(DISABLE_INFO)
-  message(STATUS "disabling INFO output")
-  add_compile_definitions(DISABLE_INFO)
-endif()
-
-option(DISABLE_PRINT "disable PRINT output" OFF)
-if(DISABLE_PRINT)
-  message(STATUS "disabling PRINT output")
-  add_compile_definitions(DISABLE_PRINT)
-endif()
-
 set(REQUIRED_ROOT_VERSION 6.16)
 set(REQUIRED_BOOST_VERSION 1.65)
 set(REQUIRED_FMT_VERSION 6.1.2)
@@ -95,6 +47,9 @@ if(FMT_ROOT)
 endif()
 find_package(fmt ${REQUIRED_FMT_VERSION} REQUIRED)
 message(STATUS "fmt   version: ${fmt_VERSION}")
+
+set(SciRooPlot_COMFLAGS ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CompileFlags.cmake)
+include(${SciRooPlot_COMFLAGS})
 
 set(SciRooPlot_INC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${SciRooPlot_INC})
