--- a/.plotrc
+++ b/.plotrc
@@ -22,7 +22,7 @@ if [[ -d "${__SCIROOPLOT_BUILD_DIR}" ]]; then
       local USER_PLOTDEF=$(${__SCIROOPLOT_BUILD_DIR}/plot-config get plotDefinitions)
       (
         cd ${USER_BUILD_DIR};
-        (make 1> /dev/null) || exit 1
+        (make -j6 1> /dev/null) || exit 1
         if [[ ! -f ${USER_PLOTDEF} || -z $(find ${USER_EXEC} -mmin +1) ]]; then
           ${USER_EXEC}
         fi
