--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -13,8 +13,7 @@ jobs:
           - 'include'
           - 'src'
           - 'app'
-          - 'example'
-          - 'skeleton'
+          - 'user'
     steps:
     - uses: actions/checkout@v3
     - name: Run clang-format style check for C/C++/Protobuf programs.
