remove todo file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,8 @@ set(ADDITIONAL_FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/include/Logging.h
   ${CMAKE_CURRENT_SOURCE_DIR}/cmake/SciRooPlotConfig.cmake
   README.md
+  docs/README.md
+  docs/INSTALL.md
   TODO.md
 )
 
