--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -1,15 +1,19 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 project(PROJECT_NAME CXX)
+
+if(POLICY CMP0144)
+  cmake_policy(SET CMP0144 NEW)
+endif()
 
 find_package(SciRooPlot CONFIG REQUIRED)
 message(STATUS "SciRooPlot version: ${SciRooPlot_VERSION}")
 
-add_plotting_executable(definePlots
-  SOURCES DefinePlots.cxx
+add_executable(definePlots
+  src/DefinePlots.cxx
 )
+target_link_libraries(definePlots PRIVATE SciRooPlot::SciRooPlot)
 
-# add your more files / include directories if needed
-# include_directories(path)
+# if needed add include dirs
+#target_include_directories(definePlots
+#    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc
+#)
